--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,48 @@
-ÿþ
+arabic-reshaper==2.1.0
+asgiref==3.2.3
+autopep8==1.5.4
+certifi==2019.11.28
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+Django==3.0.7
+django-cors-headers==3.2.1
+django-crispy-forms==1.9.2
+django-elasticsearch-dsl==7.1.1
+djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
+drf-yasg==1.17.1
+elasticsearch==7.5.1
+elasticsearch-dsl==7.1.0
+future==0.18.2
+gunicorn==20.0.4
+html5lib==1.1
+idna==2.8
+inflection==0.3.1
+itypes==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+openapi-codec==1.3.2
+packaging==20.1
+Pillow==8.0.1
+psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+PyJWT==1.7.1
+pyparsing==2.4.6
+PyPDF2==1.26.0
+python-bidi==0.4.2
+python-dateutil==2.8.1
+pytz==2018.9
+reportlab==3.5.54
+requests==2.22.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+simplejson==3.17.0
+six==1.14.0
+sqlparse==0.3.0
+toml==0.10.1
+uritemplate==3.0.1
+urllib3==1.25.8
+webencodings==0.5.1
+whitenoise==5.0.1
+xhtml2pdf==0.2.5
